--- a/main.css
+++ b/main.css
@@ -4,3 +4,10 @@
     text-align: center;
     font-weight: bold;
 }
+
+.established {
+    text-align: center;
+    font-style: italic;
+    color: rgb(247, 160, 0);
+    font-family: Arial, Helvetica, sans-serif;
+}
