--- a/main.css
+++ b/main.css
@@ -1,13 +1,41 @@
 .title-name {
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(247, 160, 0);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-weight: bold;
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
 
 .established {
     text-align: center;
     font-style: italic;
-    color: rgb(247, 160, 0);
+    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
+    margin-top: 2px;
+    margin-bottom: 5px;
 }
+
+.title-bar {
+    width: 80%;
+    background-color: rgb(238, 186, 15);
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.title-name, .established {
+    width: 80%;
+    display: block;
+}
+
+.logo {
+    display: block;
+    margin-left: auto;
+}
+
+.background-image {
+    background-image: url(logo-baner.png);
+
+}
+
