--- a/main.css
+++ b/main.css
@@ -20,9 +20,8 @@ main {
 }
 
 .title-name {
-    margin-top: 10px;
+    margin-top: 0px;
     margin-bottom: 0px;
-    padding-top: 5px;
 }
 
 .established {
@@ -39,6 +38,10 @@ main {
     padding-bottom: 0px;
 }
 
+header {
+    padding-top: 20px;
+}
+
 /*hr styling starts from here. */
 hr {
     background-color: brown;
@@ -46,9 +49,35 @@ hr {
     border: 1px solid brown;
 }
 
-.hr-1 {
+.hr-1, .hr-2 {
     margin-top: 0px;
     margin-bottom: 0px;
 }
 
-/* */
+/*Footer styling starts from here. */
+footer p {
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    font-size: .8em;
+}
+.facebook {
+    margin-bottom: 5px;
+}
+
+footer {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+a {
+    color: brown;
+
+}
+a:visited {
+    color: rgb(121, 11, 11);
+}
+
+a:hover, a:active {
+    color: black;
+}
