--- a/main.css
+++ b/main.css
@@ -14,6 +14,13 @@ main {
     max-width: 600px;
 }
 
+h2 {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    font-size: 1.2em;
+}
+
 /*Header starts from here.*/
 .title-name, .established {
     font-family: Arial, Helvetica, sans-serif;
@@ -54,13 +61,6 @@ hr {
 }
 
 /* Section-1 styling starts from here. */
-.section-1 h2 {
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 1.2em;
-}
-
 .section-1 ul {
     /* width: 80%; */
     margin-top: 0px;
@@ -75,14 +75,7 @@ hr {
     list-style-type: square;
 }
 
-/* section-2 styling starts from here. */
-.section-2 h2 {
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    font-size: 1.2em;
-}
-
+/* section-2,3 item & type class styling */
 .item p {
     display: inline-block;
     margin-top: 5px;
@@ -90,13 +83,33 @@ hr {
 }
 
 .type {
-    width: 75%;
+    width: 20%;
     text-align: left;
 }
 
+/* section-2 styling starts from here. */
 .price {
     text-align: right;
-    width: 25%;
+    width: 80%;
+}
+
+/* section-3 tyling starts from here. */
+.section-3 {
+    margin-bottom: 5px;
+}
+
+.section-3 p {
+    font-size: .9em;
+}
+
+.minimum {
+    width: 30%;
+    text-align: left;
+}
+
+.pricing {
+    width: 50%;
+    text-align: right;
 }
 
 /*Footer styling starts from here. */
