--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tiro+Bangla&display=swap');
+
 /* Body starts from here. */
 .background-image {
     background-image: url(logo-baner.png);
@@ -7,6 +9,7 @@
 main {
     background-color: antiquewhite;
     width: 80%;
+    font-family: 'Tiro Bangla', Arial, Helvetica, sans-serif;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -23,7 +26,7 @@ h2 {
 
 /*Header starts from here.*/
 .title-name, .established {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     color: brown;
     text-align: center;
 }
