--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ main {
     width: 80%;
     font-family: 'Tiro Bangla', Arial, Helvetica, sans-serif;
     margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
